# easyav1

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  manual.md
cmake/: FindSDL2.cmake  FindSDL3.cmake  dav1d.cmake
ext/dav1d/: CMakeLists.txt
ext/nestegg/: nestegg.h
src/: easyav1.c  easyav1.h  main.c
tools/: CMakeLists.txt  easyav1_benchmark.c  easyav1_player.c  easyav1_player_simple.c  test.c
